Text Alignment Corrections

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -67,6 +67,7 @@ header{
 }
 
 h4{
+    text-align: center;
     color: #E1EFF6;
 }
 
